src/objects/PPI_Data__c.object
<CustomObject>
    <description>Temp warehouse object that stores data for the PPI surveys until the new platform is ready</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PPI Datas</relationshipLabel>
        <relationshipName>PPI_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Uganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>PPI Datas</relationshipLabel>
        <relationshipName>PPI_Datas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_10__c</fullName>
        <label>Question 10</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <description>The first question on the PPI scorecard</description>
        <label>Question 1</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_2__c</fullName>
        <description>The second question on the PPI survey</description>
        <label>Question 2</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>PPI Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PPI{0000000000}</displayFormat>
        <label>PPI Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPI Datas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>